# signomat

./: .gitignore  BOOT_SETUP.md  README.md  install_signomat_service.sh  pyproject.toml  signomat.env.example
.github/workflows/: deploy-worker.yml
archive/frontend/: README.md  app.js  index.html  styles.css
archive/shared/: types.ts
archive/worker_api/: .dev.vars.example  README.md  package.json  tsconfig.json  wrangler.jsonc
docs/: architecture.md  archive-site-spec.md  archive-ui-handoff.md  ble-gatt.md  cloudflare-setup.md  dataset-download-guide.md  event-flow.md  setup.md  sqlite-schema.md  taxonomy.md  training-data.md
ios_app/: README.md  project.yml
ios_app/SignomatControl/: Info.plist
ios_app/SignomatControl.xcodeproj/: project.pbxproj
models/: README.md  sign_classifier_yolo11n_raw_min100.pt
models/sign_classifier_yolo11n_raw_min100_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
models/sign_detector_yolo11n_any_sign_ncnn_model/: metadata.yaml  model_ncnn.py
pi/config/: default.yaml  mock.yaml  taxonomy.yaml
pi/migrations/: 0001_initial.sql
pi/systemd/: signomat-api.service  signomat.service
pi/tests/: test_lcd.py  (+14 more)
scripts/: bootstrap_pi.sh  disable_legacy_service.sh  export_false_positive_review.py  export_sign_classifier_dataset.py  export_yolo_detection_dataset.py  generate_classifier_taxonomy_from_manifest.py  normalize_sign_datasets.py  prepare_sign_training_workspace.py  run_mock_phase1.sh  stage_downloaded_sign_datasets.py
training/: classifier_taxonomy_dataset.yaml  classifier_taxonomy_us.yaml  datasets.yaml
(+44 files in other folders)
